fix: optimización backend + paginación frontend